--- a/SourceCode/FixedAsset/FixedAsset.csproj
+++ b/SourceCode/FixedAsset/FixedAsset.csproj
@@ -319,6 +319,13 @@
     <Compile Include="Admin\Role_List.aspx.designer.cs">
       <DependentUpon>Role_List.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Admin\Role_View.aspx.cs">
+      <DependentUpon>Role_View.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Admin\Role_View.aspx.designer.cs">
+      <DependentUpon>Role_View.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Admin\ScrappedApproved.aspx.cs">
       <DependentUpon>ScrappedApproved.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -562,6 +569,7 @@
     <Content Include="Admin\Role_Add.aspx" />
     <Content Include="Admin\Role_AddRight.aspx" />
     <Content Include="Admin\Role_List.aspx" />
+    <Content Include="Admin\Role_View.aspx" />
     <Content Include="Admin\ScrappedApproved.aspx" />
     <Content Include="Admin\SelectedMultiAssets.aspx" />
     <Content Include="Admin\SelectSingleProject.aspx" />
