--- a/trunk/SourceCode/FixedAsset/Web.config
+++ b/trunk/SourceCode/FixedAsset/Web.config
@@ -1,7 +1,7 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <configuration>
   <connectionStrings>
-    <add name="FixedAsset" connectionString="user id=asset;password=asset;Data Source=asset" />
+    <add name="FixedAsset" connectionString="user id=asset;password=asset;Data Source=orcl" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.0">
@@ -9,29 +9,30 @@
     <authentication mode="Forms">
     </authentication>
     <httpHandlers>
-      <remove verb="*" path="*.asmx"/>
-      <add verb="*" path="*.asmx" validate="false" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
-      <add verb="*" path="*_AppService.axd" validate="false" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
-      <add verb="GET,HEAD" path="ScriptResource.axd" type="System.Web.Handlers.ScriptResourceHandler, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" validate="false"/>
+      <remove verb="*" path="*.asmx" />
+      <add verb="*" path="*.asmx" validate="false" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+      <add verb="*" path="*_AppService.axd" validate="false" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+      <add verb="GET,HEAD" path="ScriptResource.axd" type="System.Web.Handlers.ScriptResourceHandler, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" validate="false" />
     </httpHandlers>
-    <pages   controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID" validateRequest="false">
+    <pages controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID" validateRequest="false">
       <controls>
-        <add tagPrefix="asp" namespace="AjaxControlToolkit" assembly="AjaxControlToolkit"/>
-        <add tagPrefix="asp" namespace="System.Web.UI.DataVisualization.Charting" assembly="System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"/>
+        <add tagPrefix="asp" namespace="AjaxControlToolkit" assembly="AjaxControlToolkit" />
+        <add tagPrefix="asp" namespace="System.Web.UI.DataVisualization.Charting" assembly="System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
       </controls>
     </pages>
-    <customErrors mode="RemoteOnly" />
-    <sessionState mode="InProc" cookieless="false" timeout="30"/>
-    <httpRuntime requestValidationMode="2.0"/>
+    <customErrors mode="Off" />
+    <sessionState mode="InProc" cookieless="false" timeout="30" />
+    <httpRuntime requestValidationMode="2.0" />
   </system.web>
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true">
     </modules>
     <httpProtocol>
       <customHeaders>
-        <add name="X-UA-Compatible" value="IE=EmulateIE7"></add>
+        <!--<add name="X-UA-Compatible" value="IE=EmulateIE7"></add>-->
       </customHeaders>
     </httpProtocol>
+        <directoryBrowse enabled="true" />
   </system.webServer>
   <appSettings>
   </appSettings>
